# novel2scenario

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yaml  pyproject.toml
.understand-anything/: knowledge-graph.json.bak
.understand-anything/tmp/: fix-layers.js  ua-arch-analyze.js  ua-arch-input.json  ua-arch-results.json  ua-graph-repair.py  ua-graph-validate.js  ua-import-map-input.json  ua-import-map-output.json  ua-review-results-v2.json  ua-review-results.json  ua-scan-files.json  update_knowledge_graph.py
backend/: config.py  database.py  main.py  models.py
backend/agents/: engine.py  prompts.py
backend/pipeline/: assembler.py  characters.py  episodes.py  orchestrator.py  scenes.py  splitter.py
backend/routes/: ai_assist.py  characters.py  episodes.py  jobs.py  scenes.py
doc/: script-yaml-schema.md
docs/: ONBOARDING.md
docs/plans/: 2026-06-05-novel-to-script.md  2026-06-07-pipeline-rebuild.md
docs/superpowers/specs/: 2026-06-05-novel-to-script-design.md  2026-06-07-pipeline-rebuild-design.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: Layout.module.css  Layout.tsx  PipelineView.module.css  PipelineView.tsx  ProgressBar.module.css  ProgressBar.tsx  Sidebar.module.css  Sidebar.tsx  StagePanel.tsx  (+3 more)
tests/: sample_novel.txt  test_agent_engine.py  test_assembler.py  test_characters.py  test_database.py  test_episodes.py  test_integration.py  test_orchestrator.py  test_scenes.py  test_splitter.py
(+29 files in other folders)
